# GameBoy-Emulator-in-Rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  gameboy_documentation.md
src/: CLAUDE.md  config.rs  disasm.rs  disasm_tests.rs  lib.rs  main.rs  system.rs
src/audio/: CLAUDE.md  apu.rs  channels.rs  mod.rs
src/cpu/: CLAUDE.md  cpu.rs  cpu_tests.rs  cycle_validation.rs  decode.rs  exec.rs  instructions.rs  mod.rs  registers.rs  registers_tests.rs  testing.rs
src/cpu/cpu_tests/: alu_misc.rs  alu_r8.rs  cb.rs  data_transfer.rs  integration.rs  jumps.rs  mod.rs  stack.rs
src/cpu/exec/: CLAUDE.md  alu.rs  alu_tests.rs  cb_instructions.rs  cb_instructions_tests.rs  data_transfer.rs  data_transfer_tests.rs  jump_call.rs  jump_call_tests.rs  register_utils.rs  registers.rs  registers_tests.rs  rotate_shift.rs  rotate_shift_tests.rs  stack.rs  stack_tests.rs
src/display/: CLAUDE.md  frame_buffer.rs  metal_renderer.rs  mod.rs
src/input/: CLAUDE.md  joypad.rs  mod.rs
src/interrupt/: interrupt.rs  mod.rs
src/memory/: CLAUDE.md  mbc.rs  mmu.rs  mmu_tests.rs  mod.rs
src/ppu/: CLAUDE.md  mod.rs  oam.rs  rendering.rs  video.rs  video_tests.rs
src/timer/: CLAUDE.md  mod.rs  timer.rs
